homologacao - feat: Ajustes finais